replace composer.json

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "homepage": "https://github.com/bazo/nette-symfonystorageadapter",
     "authors": [
         {
-            "name": "Martin Bažík",
+            "name": "Martin BaÅ¾Ã­k",
             "email": "martin@bazo.sk",
             "homepage": "http://bazo.sk"
         }
